# AppAssist

./: .aidev.json  .gitignore  aidev_cli.py  aidev_gen_cards.py  audit_files.py  cards_cli.py  pyproject.toml
aidev/: __init__.py  assistant_api.py  cards.py  cards_runner.py  chat.py  cleanup.py  concurrency.py  config.py  core.py  discovery.py  events.py  events_bus.py  io_utils.py  llm_client.py  llm_io.py  llm_utils.py  logger.py  logging_utils.py  mode_inference.py  orchestrator.py  recommendations_io.py  repo_map.py  runtime.py  server.py  session_store.py  state.py  structure.py  validators.py  workspace.py
aidev/api/: conversation.py  llm.py
aidev/context/: __init__.py  brief.py  edit_context.py
aidev/conversation/: intents.py  planner.py
aidev/orchestration/: __init__.py  analyze_mixin.py  analyze_prompts.py  approval_inbox.py  deep_research_cache.py  deep_research_engine.py  edit_analyze_mixin.py  edit_apply_mixin.py  edit_mixin.py  edit_pipeline_mixin.py  edit_prompts.py  edit_strategy.py  qa_mixin.py  qa_prompts.py  registry.py  research.py  self_review_mixin.py
aidev/prompts/: system.analyze.md  system.brief_compile.md  system.card_summarize.md  system.create_file.md  system.edit_analyze_file.md  system.edit_file.md  system.edit_file_full.md  system.intent_classifier.md  system.plan.md  system.project_create.md  system.qa.md  (+4 more)
docs/: deep_research.md
runtimes/: __init__.py  base.py  flutter.py  logger.py  node.py  patcher.py  path_safety.py  php.py  python.py  runner.py  trace_writer.py  utils.py
scripts/: smoke_deep_research.py
(+87 files in other folders)
