[project]
name = "aidev"
version = "0.1.0"
description = "AI-powered code improvement assistant CLI and library"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Your Name", email = "you@example.com" } ]

# Minimal runtime dependencies for the CLI and orchestration glue
dependencies = [
  "click>=8.1.3",
  "requests>=2.28.0",
  "azure-ai-openai>=1.0.0"
]

[project.scripts]
# Expose three CLI entrypoints that map to the same console function
aidev = "aidev.cli:main"
ai-dev-bot = "aidev.cli:main"
aidev-gen-cards = "aidev_gen_cards:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"aidev.schemas" = ["*.json"]